tests/expectations/parser/identifiers/leading_underscore_fail.out
Error [EPAR0370005]: expected an identifier, '(' -- found '_c'
    --> test:4:13
     |
   4 |         let _c: u32 = a + b;
     |             ^^
